# commitment-decay-engine

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
commitment_decay_engine/: __init__.py  analytics.py  cli.py  extractor.py  ledger.py  models.py  nudges.py  reconcile.py
docs/: DESIGN.md  architecture.md  privacy.md
examples/: sample_evidence.json  sample_transcript.txt
tests/: test_extractor.py  test_ledger.py  test_nudges.py  test_reconcile.py
