[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commitment-decay-engine"
version = "0.1.0"
description = "A supportive commitment tracking engine for meeting transcripts and team updates."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Sarath Chandra Gentela" }
]
keywords = ["agents", "operations", "commitments", "transcripts", "accountability", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
cde = "commitment_decay_engine.cli:main"

[tool.setuptools.packages.find]
include = ["commitment_decay_engine*"]
